--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ auto_configs/__pycache__/eyal.cpython-310.pyc
 auto_configs/__pycache__/nathan_red_left.cpython-310.pyc
 auto_configs/__pycache__/nathan_red_right_one.cpython-310.pyc
 auto_configs/__pycache__/nathan_red_right.cpython-310.pyc
+__pycache__
